// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`app schemas > matches the schema Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

@available(macOS 27.0, *)
@AppEntity(schema: .audio.ambientSound)
struct IntentLaneSoundEntity: AppEntity {
  static let defaultQuery = IntentLaneSoundQuery()

  var id: String
  var title: String
  init(id: String, title: String) {
    self.id = id
    self.title = title
  }

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: title)
    )
  }
}

@available(macOS 27.0, *)
protocol IntentLaneSoundResolver: Sendable {
  func soundEntities(for identifiers: [String]) async throws -> [IntentLaneSoundEntity]
  func suggestedSoundEntities() async throws -> [IntentLaneSoundEntity]
}

@available(macOS 27.0, *)
struct IntentLaneSoundQuery: EntityQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLaneSoundEntity] {
    guard let resolver = await IntentLaneEntityResolvers.sound else { return [] }
    return try await resolver.soundEntities(for: identifiers)
  }

  func suggestedEntities() async throws -> [IntentLaneSoundEntity] {
    guard let resolver = await IntentLaneEntityResolvers.sound else { return [] }
    return try await resolver.suggestedSoundEntities()
  }
}

@available(macOS 27.0, *)
@MainActor
enum IntentLaneEntityResolvers {
  static var sound: (any IntentLaneSoundResolver)?
}

@available(macOS 27.0, *)
@AppIntent(schema: .camera.stopCapture)
struct StopCapture: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Stop capture", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "studio", path: "/stop", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Stop capture", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Stop capture", table: "IntentLane"), fields: [])
    )
  }
}
"
`;

exports[`generateSwift > matches the multi-intent Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")
  static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("title", table: "IntentLane"), title)])
    )
  }
}

struct OpenInbox: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Open the inbox", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/inbox", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Open the inbox", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Open the inbox", table: "IntentLane"), fields: [])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
      AppShortcut(intent: OpenInbox(), phrases: [
        "Open the inbox in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Open the inbox", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;

exports[`generateSwift > matches the reference Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")
  static let description = IntentDescription(LocalizedStringResource("Add a new idea", table: "IntentLane"))

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("title", table: "IntentLane"), title)])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;

exports[`localized parameters > matches the localized parameter Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

enum IntentLaneCreateIdeaPriority: String, AppEnum {
  case low

  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("Priority", table: "IntentLane"))
  }

  static var caseDisplayRepresentations: [IntentLaneCreateIdeaPriority: DisplayRepresentation] {
    [
    .low: DisplayRepresentation(title: LocalizedStringResource("Low", table: "IntentLane"))
    ]
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("Idea title", table: "IntentLane"), requestValueDialog: IntentDialog(LocalizedStringResource("What is the idea?", table: "IntentLane")))
  var title: String

  @Parameter(title: LocalizedStringResource("effort", table: "IntentLane"), requestValueDialog: IntentDialog(LocalizedStringResource("How much effort?", table: "IntentLane")))
  var effort: Int

  @Parameter(title: LocalizedStringResource("Priority", table: "IntentLane"))
  var priority: IntentLaneCreateIdeaPriority

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Create an idea", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("Idea title", table: "IntentLane"), title), (LocalizedStringResource("effort", table: "IntentLane"), String(effort)), (LocalizedStringResource("Priority", table: "IntentLane"), priority.rawValue)])
    )
  }
}
"
`;

exports[`risk policy > matches the risk Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

struct ArchiveNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Archive a note", table: "IntentLane")
  static let authenticationPolicy: IntentAuthenticationPolicy = .requiresAuthentication



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    try await requestConfirmation(actionName: .continue, dialog: IntentDialog(LocalizedStringResource("Archive a note", table: "IntentLane")))
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/archive", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("The note is archived", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Archive a note", table: "IntentLane"), fields: [])
    )
  }
}

struct CreateNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create a note", table: "IntentLane")
  static let authenticationPolicy: IntentAuthenticationPolicy = .alwaysAllowed



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/new", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Create a note", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create a note", table: "IntentLane"), fields: [])
    )
  }
}

struct DeleteNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Delete a note", table: "IntentLane")
  static let authenticationPolicy: IntentAuthenticationPolicy = .requiresAuthentication



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    try await requestConfirmation(actionName: .continue, dialog: IntentDialog(LocalizedStringResource("Delete this note?", table: "IntentLane")))
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/delete", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("The note is deleted", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Delete a note", table: "IntentLane"), fields: [])
    )
  }
}

struct ReadNote: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Read a note", table: "IntentLane")



  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/notes/read", query: [:])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Read a note", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Read a note", table: "IntentLane"), fields: [])
    )
  }
}
"
`;

exports[`schema parameters > matches the schema parameter Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

@available(macOS 27.0, *)
@AppEntity(schema: .reader.page)
struct IntentLanePageEntity: AppEntity {
  static let defaultQuery = IntentLanePageQuery()

  var id: String
  var label: String
  init(id: String, label: String) {
    self.id = id
    self.label = label
  }

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: label)
    )
  }
}

@available(macOS 27.0, *)
protocol IntentLanePageResolver: Sendable {
  func pageEntities(for identifiers: [String]) async throws -> [IntentLanePageEntity]
  func suggestedPageEntities() async throws -> [IntentLanePageEntity]
}

@available(macOS 27.0, *)
struct IntentLanePageQuery: EntityQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLanePageEntity] {
    guard let resolver = await IntentLaneEntityResolvers.page else { return [] }
    return try await resolver.pageEntities(for: identifiers)
  }

  func suggestedEntities() async throws -> [IntentLanePageEntity] {
    guard let resolver = await IntentLaneEntityResolvers.page else { return [] }
    return try await resolver.suggestedPageEntities()
  }
}

@available(macOS 27.0, *)
@MainActor
enum IntentLaneEntityResolvers {
  static var page: (any IntentLanePageResolver)?
}

@available(macOS 27.0, *)
protocol RotatePagesHandler: Sendable {
  func perform(pages: [IntentLanePageEntity], isClockwise: Bool) async throws
}

@available(macOS 27.0, *)
enum IntentLaneHandlerError: Error {
  case missingHandler(String)
}

@available(macOS 27.0, *)
@MainActor
enum IntentLaneIntentHandlers {
  static var rotate_pages: (any RotatePagesHandler)?
}

@available(macOS 27.0, *)
@AppIntent(schema: .reader.rotatePages)
struct RotatePages: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Rotate pages", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("pages", table: "IntentLane"))
  var pages: [IntentLanePageEntity]

  @Parameter(title: LocalizedStringResource("isClockwise", table: "IntentLane"))
  var isClockwise: Bool

  func perform() async throws -> some IntentResult & ProvidesDialog {
    guard let handler = await IntentLaneIntentHandlers.rotate_pages else {
      throw IntentLaneHandlerError.missingHandler("rotate_pages")
    }
    try await handler.perform(pages: pages, isClockwise: isClockwise)
    return .result(dialog: IntentDialog(LocalizedStringResource("Rotate pages", table: "IntentLane")))
  }
}
"
`;

exports[`schema protocols > matches the protocol Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import CoreSpotlight
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

@available(macOS 27.0, *)
@AppEntity(schema: .reader.page)
struct IntentLanePageEntity: AppEntity, IndexedEntity {
  static let defaultQuery = IntentLanePageQuery()

  var id: String
  var label: String
  init(id: String, label: String) {
    self.id = id
    self.label = label
  }

  var displayRepresentation: DisplayRepresentation {
    DisplayRepresentation(
      title: LocalizedStringResource(stringLiteral: label)
    )
  }
}

@available(macOS 27.0, *)
protocol IntentLanePageResolver: Sendable {
  func pageEntities(for identifiers: [String]) async throws -> [IntentLanePageEntity]
  func pageEntities(matching string: String) async throws -> [IntentLanePageEntity]
  func suggestedPageEntities() async throws -> [IntentLanePageEntity]
}

@available(macOS 27.0, *)
struct IntentLanePageQuery: EntityQuery, EntityStringQuery {
  func entities(for identifiers: [String]) async throws -> [IntentLanePageEntity] {
    guard let resolver = await IntentLaneEntityResolvers.page else { return [] }
    return try await resolver.pageEntities(for: identifiers)
  }

  func entities(matching string: String) async throws -> [IntentLanePageEntity] {
    guard let resolver = await IntentLaneEntityResolvers.page else { return [] }
    return try await resolver.pageEntities(matching: string)
  }

  func suggestedEntities() async throws -> [IntentLanePageEntity] {
    guard let resolver = await IntentLaneEntityResolvers.page else { return [] }
    return try await resolver.suggestedPageEntities()
  }
}

@available(macOS 27.0, *)
@MainActor
enum IntentLaneEntityResolvers {
  static var page: (any IntentLanePageResolver)?
}

@available(macOS 27.0, *)
protocol DeletePagesHandler: Sendable {
  func perform(entities: [IntentLanePageEntity]) async throws
}

@available(macOS 27.0, *)
protocol OpenPageHandler: Sendable {
  func perform(target: IntentLanePageEntity) async throws
}

@available(macOS 27.0, *)
enum IntentLaneHandlerError: Error {
  case missingHandler(String)
}

@available(macOS 27.0, *)
@MainActor
enum IntentLaneIntentHandlers {
  static var delete_pages: (any DeletePagesHandler)?
  static var open_page: (any OpenPageHandler)?
}

@available(macOS 27.0, *)
@AppIntent(schema: .reader.deletePages)
struct DeletePages: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Delete pages", table: "IntentLane")

  static var parameterSummary: some ParameterSummary {
    Summary("Delete \\(\\.$entities)")
  }

  var entities: [IntentLanePageEntity]

  func perform() async throws -> some IntentResult & ProvidesDialog {
    guard let handler = await IntentLaneIntentHandlers.delete_pages else {
      throw IntentLaneHandlerError.missingHandler("delete_pages")
    }
    try await handler.perform(entities: entities)
    return .result(dialog: IntentDialog(LocalizedStringResource("Delete pages", table: "IntentLane")))
  }
}

@available(macOS 27.0, *)
@AppIntent(schema: .reader.openPage)
struct OpenPage: OpenIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Open page", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("Page", table: "IntentLane"))
  var target: IntentLanePageEntity

  @MainActor
  func perform() async throws -> some IntentResult {
    guard let handler = IntentLaneIntentHandlers.open_page else {
      throw IntentLaneHandlerError.missingHandler("open_page")
    }
    try await handler.perform(target: target)
    return .result()
  }
}
"
`;

exports[`typed parameters > matches the typed Swift snapshot 1`] = `
"// Generated by IntentLane. Do not edit.
// Source schema: 0.1

import AppIntents
import Foundation
import SwiftUI

enum IntentLaneRoute {
  static func make(scheme: String, path: String, query: [String: String]) -> URL {
    var components = URLComponents()
    components.scheme = scheme
    components.path = path
    if !query.isEmpty {
      components.queryItems = query.sorted { $0.key < $1.key }.map { URLQueryItem(name: $0.key, value: $0.value) }
    }
    return components.url ?? URL(string: "about:blank")!
  }
}

@available(macOS 13.0, iOS 16.0, *)
struct IntentLaneSnippetView: View {
  let title: LocalizedStringResource
  let fields: [(LocalizedStringResource, String)]

  var body: some View {
    VStack(alignment: .leading, spacing: 8) {
      Text(title).font(.headline)
      ForEach(fields.indices, id: \\.self) { index in
        HStack {
          Text(fields[index].0).foregroundStyle(.secondary)
          Spacer()
          Text(fields[index].1)
        }
      }
    }
    .padding()
  }
}

enum IntentLaneCreateIdeaPriority: String, AppEnum {
  case high
  case low

  static var typeDisplayRepresentation: TypeDisplayRepresentation {
    TypeDisplayRepresentation(name: LocalizedStringResource("priority", table: "IntentLane"))
  }

  static var caseDisplayRepresentations: [IntentLaneCreateIdeaPriority: DisplayRepresentation] {
    [
    .high: DisplayRepresentation(title: LocalizedStringResource("High", table: "IntentLane")),
    .low: DisplayRepresentation(title: LocalizedStringResource("Low", table: "IntentLane"))
    ]
  }
}

struct CreateIdea: AppIntent {
  static let title: LocalizedStringResource = LocalizedStringResource("Create an idea", table: "IntentLane")

  @Parameter(title: LocalizedStringResource("title", table: "IntentLane"))
  var title: String

  @Parameter(title: LocalizedStringResource("effort", table: "IntentLane"))
  var effort: Int

  @Parameter(title: LocalizedStringResource("ratio", table: "IntentLane"))
  var ratio: Double

  @Parameter(title: LocalizedStringResource("pinned", table: "IntentLane"))
  var pinned: Bool

  @Parameter(title: LocalizedStringResource("due", table: "IntentLane"))
  var due: DateComponents

  @Parameter(title: LocalizedStringResource("at", table: "IntentLane"))
  var at: Date

  @Parameter(title: LocalizedStringResource("priority", table: "IntentLane"))
  var priority: IntentLaneCreateIdeaPriority

  func perform() async throws -> some IntentResult & ProvidesDialog & ShowsSnippetView & OpensIntent {
    let intentLaneURL = IntentLaneRoute.make(scheme: "example", path: "/ideas/new", query: ["at": at.ISO8601Format(), "due": String(format: "%04d-%02d-%02d", due.year ?? 0, due.month ?? 0, due.day ?? 0), "effort": String(effort), "pinned": pinned ? "true" : "false", "priority": priority.rawValue, "ratio": String(ratio), "title": title])
    return .result(
      opensIntent: OpenURLIntent(intentLaneURL),
      dialog: IntentDialog(LocalizedStringResource("Your idea is ready", table: "IntentLane")),
      view: IntentLaneSnippetView(title: LocalizedStringResource("Create an idea", table: "IntentLane"), fields: [(LocalizedStringResource("title", table: "IntentLane"), title), (LocalizedStringResource("effort", table: "IntentLane"), String(effort)), (LocalizedStringResource("ratio", table: "IntentLane"), String(ratio)), (LocalizedStringResource("pinned", table: "IntentLane"), pinned ? "true" : "false"), (LocalizedStringResource("due", table: "IntentLane"), String(format: "%04d-%02d-%02d", due.year ?? 0, due.month ?? 0, due.day ?? 0)), (LocalizedStringResource("at", table: "IntentLane"), at.ISO8601Format()), (LocalizedStringResource("priority", table: "IntentLane"), priority.rawValue)])
    )
  }
}

struct IntentLaneShortcuts: AppShortcutsProvider {
  static var appShortcuts: [AppShortcut] {
      AppShortcut(intent: CreateIdea(), phrases: [
        "Create an idea in \\(.applicationName)"
      ], shortTitle: LocalizedStringResource("Create an idea", table: "IntentLane"), systemImageName: "sparkles")
  }
}
"
`;
